source/glad2/gles2.d

enum GL_TEXTURE_DEPTH = 0x8071;
enum GL_TEXTURE_DEPTH_SIZE = 0x884A;
enum GL_TEXTURE_DEPTH_TYPE = 0x8C16;
enum GL_TEXTURE_FETCH_BARRIER_BIT = 0x00000008;
enum GL_TEXTURE_FIXED_SAMPLE_LOCATIONS = 0x9107;
enum GL_TEXTURE_GREEN_SIZE = 0x805D;
enum GL_TEXTURE_GREEN_TYPE = 0x8C11;
enum GL_TEXTURE_HEIGHT = 0x1001;
enum GL_TEXTURE_IMMUTABLE_FORMAT = 0x912F;
enum GL_TEXTURE_IMMUTABLE_LEVELS = 0x82DF;
enum GL_TEXTURE_INTERNAL_FORMAT = 0x1003;
enum GL_TEXTURE_MAG_FILTER = 0x2800;
enum GL_TEXTURE_MAX_LEVEL = 0x813D;
enum GL_TEXTURE_MAX_LOD = 0x813B;
enum GL_TEXTURE_MIN_FILTER = 0x2801;
enum GL_TEXTURE_MIN_LOD = 0x813A;
enum GL_TEXTURE_RED_SIZE = 0x805C;
enum GL_TEXTURE_RED_TYPE = 0x8C10;
enum GL_TEXTURE_SAMPLES = 0x9106;
enum GL_TEXTURE_SHARED_SIZE = 0x8C3F;
enum GL_TEXTURE_STENCIL_SIZE = 0x88F1;
enum GL_TEXTURE_SWIZZLE_A = 0x8E45;
enum GL_TEXTURE_SWIZZLE_B = 0x8E44;
enum GL_TEXTURE_SWIZZLE_G = 0x8E43;
enum GL_TEXTURE_SWIZZLE_R = 0x8E42;
enum GL_TEXTURE_UPDATE_BARRIER_BIT = 0x00000100;
enum GL_TEXTURE_WIDTH = 0x1000;
enum GL_TEXTURE_WRAP_R = 0x8072;
enum GL_TEXTURE_WRAP_S = 0x2802;
enum GL_TEXTURE_WRAP_T = 0x2803;
enum GL_TIMEOUT_EXPIRED = 0x911B;
enum GL_TIMEOUT_IGNORED = 0xFFFFFFFFFFFFFFFF;
enum GL_TOP_LEVEL_ARRAY_SIZE = 0x930C;
enum GL_TOP_LEVEL_ARRAY_STRIDE = 0x930D;
enum GL_TRANSFORM_FEEDBACK = 0x8E22;
enum GL_TRANSFORM_FEEDBACK_ACTIVE = 0x8E24;
enum GL_TRANSFORM_FEEDBACK_BARRIER_BIT = 0x00000800;
enum GL_TRANSFORM_FEEDBACK_BINDING = 0x8E25;
enum GL_TRANSFORM_FEEDBACK_BUFFER = 0x8C8E;
enum GL_TRANSFORM_FEEDBACK_BUFFER_ACTIVE = 0x8E24;
enum GL_TRANSFORM_FEEDBACK_BUFFER_BINDING = 0x8C8F;
enum GL_TRANSFORM_FEEDBACK_BUFFER_MODE = 0x8C7F;
enum GL_TRANSFORM_FEEDBACK_BUFFER_PAUSED = 0x8E23;
enum GL_TRANSFORM_FEEDBACK_BUFFER_SIZE = 0x8C85;
enum GL_TRANSFORM_FEEDBACK_BUFFER_START = 0x8C84;
enum GL_TRANSFORM_FEEDBACK_PAUSED = 0x8E23;
enum GL_TRANSFORM_FEEDBACK_PRIMITIVES_WRITTEN = 0x8C88;
enum GL_TRANSFORM_FEEDBACK_VARYING = 0x92F4;
enum GL_TRANSFORM_FEEDBACK_VARYINGS = 0x8C83;
enum GL_TRANSFORM_FEEDBACK_VARYING_MAX_LENGTH = 0x8C76;
enum GL_TRIANGLES = 0x0004;
enum GL_TRIANGLE_FAN = 0x0006;
enum GL_TRIANGLE_STRIP = 0x0005;
enum GL_TRUE = 1;
enum GL_TYPE = 0x92FA;
enum GL_UNIFORM = 0x92E1;
enum GL_UNIFORM_ARRAY_STRIDE = 0x8A3C;
enum GL_UNIFORM_BARRIER_BIT = 0x00000004;
enum GL_UNIFORM_BLOCK = 0x92E2;
enum GL_UNIFORM_BLOCK_ACTIVE_UNIFORMS = 0x8A42;
enum GL_UNIFORM_BLOCK_ACTIVE_UNIFORM_INDICES = 0x8A43;
enum GL_UNIFORM_BLOCK_BINDING = 0x8A3F;
enum GL_UNIFORM_BLOCK_DATA_SIZE = 0x8A40;
enum GL_UNIFORM_BLOCK_INDEX = 0x8A3A;
enum GL_UNIFORM_BLOCK_NAME_LENGTH = 0x8A41;
enum GL_UNIFORM_BLOCK_REFERENCED_BY_FRAGMENT_SHADER = 0x8A46;
enum GL_UNIFORM_BLOCK_REFERENCED_BY_VERTEX_SHADER = 0x8A44;
enum GL_UNIFORM_BUFFER = 0x8A11;
enum GL_UNIFORM_BUFFER_BINDING = 0x8A28;
enum GL_UNIFORM_BUFFER_OFFSET_ALIGNMENT = 0x8A34;
enum GL_UNIFORM_BUFFER_SIZE = 0x8A2A;
enum GL_UNIFORM_BUFFER_START = 0x8A29;
enum GL_UNIFORM_IS_ROW_MAJOR = 0x8A3E;
enum GL_UNIFORM_MATRIX_STRIDE = 0x8A3D;
enum GL_UNIFORM_NAME_LENGTH = 0x8A39;
enum GL_UNIFORM_OFFSET = 0x8A3B;
enum GL_UNIFORM_SIZE = 0x8A38;
enum GL_UNIFORM_TYPE = 0x8A37;
enum GL_UNPACK_ALIGNMENT = 0x0CF5;
enum GL_UNPACK_IMAGE_HEIGHT = 0x806E;
enum GL_UNPACK_ROW_LENGTH = 0x0CF2;
enum GL_UNPACK_SKIP_IMAGES = 0x806D;
enum GL_UNPACK_SKIP_PIXELS = 0x0CF4;
enum GL_UNPACK_SKIP_ROWS = 0x0CF3;
enum GL_UNSIGNALED = 0x9118;
enum GL_UNSIGNED_BYTE = 0x1401;
enum GL_UNSIGNED_INT = 0x1405;
enum GL_UNSIGNED_INT_10F_11F_11F_REV = 0x8C3B;
enum GL_UNSIGNED_INT_24_8 = 0x84FA;
enum GL_UNSIGNED_INT_2_10_10_10_REV = 0x8368;
enum GL_UNSIGNED_INT_5_9_9_9_REV = 0x8C3E;
enum GL_UNSIGNED_INT_ATOMIC_COUNTER = 0x92DB;
enum GL_UNSIGNED_INT_IMAGE_2D = 0x9063;
enum GL_UNSIGNED_INT_IMAGE_2D_ARRAY = 0x9069;
enum GL_UNSIGNED_INT_IMAGE_3D = 0x9064;
enum GL_UNSIGNED_INT_IMAGE_CUBE = 0x9066;
enum GL_UNSIGNED_INT_SAMPLER_2D = 0x8DD2;
enum GL_UNSIGNED_INT_SAMPLER_2D_ARRAY = 0x8DD7;
enum GL_UNSIGNED_INT_SAMPLER_2D_MULTISAMPLE = 0x910A;
enum GL_UNSIGNED_INT_SAMPLER_3D = 0x8DD3;
enum GL_UNSIGNED_INT_SAMPLER_CUBE = 0x8DD4;
enum GL_UNSIGNED_INT_VEC2 = 0x8DC6;
enum GL_UNSIGNED_INT_VEC3 = 0x8DC7;
enum GL_UNSIGNED_INT_VEC4 = 0x8DC8;
enum GL_UNSIGNED_NORMALIZED = 0x8C17;
enum GL_UNSIGNED_SHORT = 0x1403;
enum GL_UNSIGNED_SHORT_4_4_4_4 = 0x8033;
enum GL_UNSIGNED_SHORT_5_5_5_1 = 0x8034;
enum GL_UNSIGNED_SHORT_5_6_5 = 0x8363;
enum GL_VALIDATE_STATUS = 0x8B83;
enum GL_VENDOR = 0x1F00;
enum GL_VERSION = 0x1F02;
enum GL_VERTEX_ARRAY_BINDING = 0x85B5;
enum GL_VERTEX_ATTRIB_ARRAY_BARRIER_BIT = 0x00000001;
enum GL_VERTEX_ATTRIB_ARRAY_BUFFER_BINDING = 0x889F;
enum GL_VERTEX_ATTRIB_ARRAY_DIVISOR = 0x88FE;
enum GL_VERTEX_ATTRIB_ARRAY_ENABLED = 0x8622;
enum GL_VERTEX_ATTRIB_ARRAY_INTEGER = 0x88FD;
enum GL_VERTEX_ATTRIB_ARRAY_NORMALIZED = 0x886A;
enum GL_VERTEX_ATTRIB_ARRAY_POINTER = 0x8645;
enum GL_VERTEX_ATTRIB_ARRAY_SIZE = 0x8623;
enum GL_VERTEX_ATTRIB_ARRAY_STRIDE = 0x8624;
enum GL_VERTEX_ATTRIB_ARRAY_TYPE = 0x8625;
enum GL_VERTEX_ATTRIB_BINDING = 0x82D4;
enum GL_VERTEX_ATTRIB_RELATIVE_OFFSET = 0x82D5;
enum GL_VERTEX_BINDING_BUFFER = 0x8F4F;
enum GL_VERTEX_BINDING_DIVISOR = 0x82D6;
enum GL_VERTEX_BINDING_OFFSET = 0x82D7;
enum GL_VERTEX_BINDING_STRIDE = 0x82D8;
enum GL_VERTEX_SHADER = 0x8B31;
enum GL_VERTEX_SHADER_BIT = 0x00000001;
enum GL_VIEWPORT = 0x0BA2;
enum GL_WAIT_FAILED = 0x911D;
enum GL_WRITE_ONLY = 0x88B9;
enum GL_ZERO = 0;

alias GLenum = uint;
alias GLboolean = ubyte;
alias GLbitfield = uint;
alias GLvoid = void;
alias GLbyte = byte;
alias GLubyte = ubyte;
alias GLshort = short;
alias GLushort = ushort;
alias GLint = int;
alias GLuint = uint;
alias GLclampx = int;
alias GLsizei = int;
alias GLfloat = float;
alias GLclampf = float;
alias GLdouble = double;
alias GLclampd = double;
alias GLeglClientBufferEXT = void*;
alias GLeglImageOES = void*;
alias GLchar = char;
alias GLcharARB = char;

alias GLhandleARB = uint;

alias GLhalf = ushort;
alias GLhalfARB = ushort;
alias GLfixed = int;

alias GLintptr = c_long;

alias GLintptrARB = c_long;

alias GLsizeiptr = c_long;

alias GLsizeiptrARB = c_long;

alias GLint64 = c_long;
alias GLint64EXT = c_long;
alias GLuint64 = c_ulong;
alias GLuint64EXT = c_ulong;
struct __GLsync;
alias GLsync = __GLsync*;
struct _cl_context;
struct _cl_event;
alias GLDEBUGPROC = void function (GLenum source, GLenum type, GLuint id, GLenum severity, GLsizei length, const(GLchar)* message, const(void)* userParam);
alias GLDEBUGPROCARB = void function (GLenum source, GLenum type, GLuint id, GLenum severity, GLsizei length, const(GLchar)* message, const(void)* userParam);
alias GLDEBUGPROCKHR = void function (GLenum source, GLenum type, GLuint id, GLenum severity, GLsizei length, const(GLchar)* message, const(void)* userParam);
alias GLDEBUGPROCAMD = void function (GLuint id, GLenum category, GLenum severity, GLsizei length, const(GLchar)* message, void* userParam);
alias GLhalfNV = ushort;
alias GLvdpauSurfaceNV = c_long;
alias GLVULKANPROCNV = void function ();

enum GL_ES_VERSION_2_0 = 1;
extern __gshared int GLAD_GL_ES_VERSION_2_0;
enum GL_ES_VERSION_3_0 = 1;
extern __gshared int GLAD_GL_ES_VERSION_3_0;
enum GL_ES_VERSION_3_1 = 1;
extern __gshared int GLAD_GL_ES_VERSION_3_1;
